--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
         <div align="center" style="margin:auto;">
                 <h1 align="center" style='margin:auto;'>
-                    Alexander Efimenko
+                    Aleksandr Efimenko
                 </h1>
                 <h2 align="center" style='margin:auto;'>
-                    Android Software Engineer @ Etagi
+                    Android Software Engineer @ Huma
                 </h2>
         </div>
       
